fix overflow in contact
decrease padding left-right

--- a/styles.css
+++ b/styles.css
@@ -593,7 +593,7 @@ section{
 }
 .contact-content-con {
     display: flex;
-    padding: 3.5rem 8rem;
+    padding: 3.5rem 6rem;
   }
   .contact-content-con .left-contact {
     flex: 2;
